--- a/TimeTable.Web/TimeTable.Web/Web.config
+++ b/TimeTable.Web/TimeTable.Web/Web.config
@@ -10,7 +10,7 @@
       <add key="PreserveLoginUrl" value="true" />
       <add key="ClientValidationEnabled" value="true" />
       <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-      <add key="webpack:wds:use" value="true" />
+      <add key="webpack:wds:use" value="false" />
       <add key="webpack:wds:port" value="8080" />
       <add key="webpack:wds:manifest" value="~/asset-manifest.json" />
       <add key="webpack:prod:manifest" value="~/asset-manifest.json" />
