--- a/TimeTable.Web/TimeTable.Web.Api.v1.Domain.Services.Xpo/TimeTable.Web.Api.v1.Domain.Services.Xpo.csproj
+++ b/TimeTable.Web/TimeTable.Web.Api.v1.Domain.Services.Xpo/TimeTable.Web.Api.v1.Domain.Services.Xpo.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="AddressesService.cs" />
     <Compile Include="DependencyInjection\DomainServicesExtensions.cs" />
+    <Compile Include="EventsService.cs" />
     <Compile Include="Mappers\AddressLocationMapper.cs" />
     <Compile Include="ClassroomsService.cs" />
     <Compile Include="Mappers\ContingentDivisionCourseMapper.cs" />
